syntax = "proto3";
import public "page.proto";
import public "common.proto";

package dubhe_ci.rpc;
option go_package = ".;pb";
option java_package = "cn.janyd.grpc";

message Cred {
    enum CredentialTypes {
        UNKONWN = 0;
        ACCOUNT = 1;
        PUBLIC_KEY = 2;
    }
    string  id = 1;
    string  name = 2;
    CredentialTypes  credentialType = 3;
    string  username = 4;
    string  password = 5;
    string  publicKey = 6;
    string  privateKey = 7;
    int64  createdAt = 8;
    int64  updatedAt = 9;
}

message Creds {
    repeated Cred records = 1;
}

message Key {
    string publicKey = 1;
    string privateKey = 2;
}

service CredentialService {
    rpc List(dubhe_ci.rpc.Empty) returns(Creds);

    rpc Create(Cred) returns(dubhe_ci.rpc.Empty);

    rpc Delete(dubhe_ci.rpc.Id) returns(dubhe_ci.rpc.Empty) {};

    rpc RandomGenerateSshKey(dubhe_ci.rpc.Empty) returns(Key) {};
}